<resources>
    <string name="app_name">AnekaStoreMobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="aneka_store">Aneka Store</string>
    <string name="name_product">Indomie Goreng</string>
    <string name="price">Rp. 110.000</string>

    <string name="description_product">Deskripsi Produk</string>
    <string name="no_register">No. Registrasi</string>
    <string name="value_no_register">MD-231509014002</string>
    <string name="category">Kategori</string>
    <string name="value_category">Bahan Pokok</string>
    <string name="packet">Paket</string>
    <string name="value_packet">Pembelian Minimum 5 Dus</string>
    <string name="value_desc">Pembelian Minimum sebanyak 1 dus, 1 dus berisikan 40 pcs.</string>
    <string name="cart">Keranjang</string>
    <string name="add_to_cart">Masukkan Keranjang</string>
    <string name="same_product">---- Produk Yang Sama ----</string>
    <string name="one">1</string>
    <string name="total">Total:</string>
    <string name="items">Items</string>
    <string name="checkout">Checkout</string>
    <string name="address_send">Alamat Pengiriman</string>
    <string name="name_user">Ardian Rahmananda Saputra</string>
    <string name="phone">(+33)7 35 55 45 43</string>
    <string name="address">Rectory Cottage, Farleigh Court Road, Warlingham, CR6 9PX </string>
    <string name="method_delivery">Metode Pengiriman</string>
    <string name="choose_delivery">Pilih Pengiriman</string>
    <string name="choose_courier">Pilih Kurir</string>
    <string name="choose_service">Pilih Service</string>
    <string name="create_order">Buat Pesanan</string>

    <string name="edit_profile">Ubah Profile</string>
    <string name="history_transaction">Riwayat Transaksi</string>
    <string name="logout">Keluar</string>
    <string name="copy">Copy</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_hp">Ho HP</string>
    <string name="choose_gender">Pilih Gender</string>
    <string name="choose_province">Pilih Provinsi</string>
    <string name="choose_city">Pilih Kota/Kab</string>
    <string name="postal_zip">Kode Pos</string>
    <string name="detail_address">Alamat Detail</string>
    <string name="save">Simpan</string>

    <string name="date_buy">24:60:60 – 31 Desember 2024</string>
    <string name="success">SUCCESS</string>
    <string name="x">x</string>
    <string name="equal_to">=</string>
</resources>