<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/name_product"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/indomie_goreng" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="1dp">

        <TextView
            android:id="@+id/tv_name_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_product" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_product"
            tools:text="@string/one" />

        <TextView
            android:id="@+id/tv_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/x"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_amount"
            app:layout_constraintTop_toTopOf="@id/tv_amount" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_x"
            app:layout_constraintTop_toTopOf="@id/tv_amount"
            tools:text="@string/price" />

        <TextView
            android:id="@+id/tv_equal_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/equal_to"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="@id/tv_amount" />

        <TextView
            android:id="@+id/tv_sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_equal_to"
            app:layout_constraintTop_toTopOf="@id/tv_amount"
            tools:text="@string/price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>